[project]
name = "mdlaunch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "linkify-it-py>=2.1.0",
    "markdown-it-py>=4.2.0",
    "mdit-py-plugins>=0.6.1",
    "pygments>=2.20.0",
    "python-frontmatter>=1.3.0",
    "uvicorn[standard]>=0.50.2",
    "watchfiles>=1.2.0",
]
